# f5xc-dashboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  openapi-quota.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  main.py
app/clients/: f5_xc_client.py
app/models/: namespace.py  quota.py  top_consumers.py
app/services/: csd.py  namespace_objects.py  quota.py  top_consumers.py
app/web/: routes.py
app/web/templates/: base.html  namespace.html  quota.html  settings.html  top_consumers.html
tests/: test_client.py  test_namespace_service.py  test_quota_service.py  test_routes.py  test_top_consumers.py
